--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,18 +1,13 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-      <view>
-        <button bindtap="bindViewGeam">开始游戏</button>
-      </view>
-    </block>
+  	
+	<view wx:for-items="{{gameList}}" class="usermotto">
+	    <button type="primary" disabled="{{disabled}}" bindtap="start{{item}}"> {{item}} </button>
+	</view>
 
+  <view>
+    <button  type="primary" style="top:10px" bindtap="al">排行榜</button>
   </view>
 
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+	<text class="more">更多内容，敬请期待...</text>
 </view>
