--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,7 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.more{
+	color: #aaa;
+	font-size: 14px;
+	position:fixed;
+	bottom: 20px;
 }
